--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CuidaPet</title>
     <link rel="stylesheet" href="home.css">
-    <link rel="icon" href="/midias/icon2.png">
+    <link rel="icon" href="midias/CapaForum.png">
     <script defer src="home.js"></script>
 </head>
 <body>
